[package]
name = "sjqchatapp"
version = "0.1.0"
authors = ["Jiangqiu Shen <ivy22233qiu@live.com>"]
edition = "2021"
license = "MIT"
description = "A simple chat app"

[dependencies]
async-tungstenite = {version="0.17.2",features=["tokio-runtime"]}
iced_futures = "0.4.1"
iced_native = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio={version="1.19.2",features=["full"]}
directories-next = "2.0"
iced = {version= "0.4.2",features=["tokio"]}


[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
wasm-timer = "0.2"
iced = {version= "0.4.2",features=[]}
iced_web = "0.4.0"
